@@ -1,7 +1,7 @@
 ---
 title: "IntelliJ IDEA"
 category: Developers
-order: 1
+order: 3
 toc: true
 ---
 
@@ -14,8 +14,22 @@ Build phoenicis (root) → Lifecycle → package
 
 ### Run
 Run → Edit Configurations
-add: JavaFXApplication with main class org.phoenicis.javafx.JavaFXApplication
-![IntelliJ IDEA configuration](/images/intellij-idea-run.png)
+add: JavaFXApplication with:
+* Name: `JavaFXApplication`
+* Main class: `org.phoenicis.javafx.JavaFXApplication`
+* VM options: 
+```
+--add-modules=jdk.crypto.ec,java.base,javafx.base,javafx.web,javafx.media,javafx.graphics,javafx.controls,java.naming,java.sql,java.scripting,jdk.scripting.nashorn,jdk.internal.vm.ci,jdk.internal.vm.compiler,org.graalvm.truffle,jdk.jsobject,jdk.xml.dom --module-path phoenicis-dist/target/lib -XX:+UnlockExperimentalVMOptions -XX:+EnableJVMCI --upgrade-module-path=phoenicis-dist/target/lib/compiler.jar
+```
+* Program arguments: empty
+* Working directory: `/path/to/phoenicis`
+* Environment variables: empty
+* Redirect input from: unchecked
+* Use classpath of module: `phoenicis-dist`
+* Include dependencis with "Provided" scope: unchecked
+* JRE: `Default`
+* Shorten command line: `user-local: none - java [options]`
+* Enable capturing form snapshots: unchecked
 
 ### Code Style
 File → Settings → Editor → Code Style → Scheme: Manage... → Import → Eclipse XML Profile: select [settings/POL_Formatter_Settings.xml](https://github.com/PhoenicisOrg/phoenicis/blob/master/settings/POL_Formatter_Settings.xml)
